--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ user.password=${user.password}
 
 grid2.hub=http://127.0.0.1:4444/wd/hub
 
-site.url=http://mail.ru/
+site.url=http://dev.engage.do/
 
 browser.name=firefox
 browser.version=${browser.version}
